trunk/tests/jastadd/negative/name_errors/L1/2_UnknownTypeName2.ob
MODULE TestModule;
	VAR a, b : INTZ;
END TestModule.
